...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BXj-R0-h2U">
                                <rect key="frame" x="111" y="265" width="152" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                <state key="normal" title="Product Info"/>
                                <connections>
                                    <action selector="viewProductButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mlR-G8-6Ov"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="feh-jX-1ob">
                                <rect key="frame" x="111" y="318" width="152" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                <state key="normal" title="Auto-Reorder"/>
                                <connections>
                                    <action selector="autoReorderButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yNq-eX-TfJ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9jr-2c-Tgu">
                                <rect key="frame" x="111" y="372" width="152" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                <state key="normal" title="App Order"/>
                                <connections>
                                    <action selector="appOrderButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CRf-JV-9D6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="moO-R8-JeR">
                                <rect key="frame" x="105" y="428" width="164" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                <state key="normal" title="Order History Details"/>
                                <connections>
                                    <action selector="orderHistoryDetailsButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eq9-8x-r4E"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1800contacts" translatesAutoresizingMaskIntoConstraints="NO" id="Ki9-42-uPT">
                                <rect key="frame" x="16" y="57" width="343" height="200"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BmS-oD-Web">
                                <rect key="frame" x="16" y="28" width="65" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Sign Out">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="signOutButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Nea-cJ-ICf"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O0p-gs-MTP">
                                <rect key="frame" x="111" y="480" width="152" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                <state key="normal" title="App Launch"/>
                                <connections>
                                    <action selector="appLaunchButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wG4-OD-ki4"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o11-Un-ODN">
                                <rect key="frame" x="317" y="28" width="39" height="30"/>
...
